chapter5/pingpong_logoutput/log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-hash
          emptyDir: {}
        - name: info-file
          configMap:
            name: log-output-config
            items:
              - key: information.txt
                path: information.txt
      containers:
        - name: hash-generator
          image: vesajo/hash-generator@sha256:c864d479817f8705f6a8369bc7b2a6b1b69c0b5f0678477980db16fb5ad2b156
          volumeMounts:
            - name: shared-hash
              mountPath: /app/files
        - name: hash-outputter
          image: vesajo/hash-outputter@sha256:61cc685ed9c7c8feb535e1d357655015958e20805a48ae6229539f8f7ea0d777
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 3000
          volumeMounts:
            - name: shared-hash
              mountPath: /app/files/hash-file
            - name: info-file
              mountPath: /app/files/info-file
